[gd_scene load_steps=7 format=3 uid="uid://ntv54ebfwy3h"]

[ext_resource type="Script" path="res://Scenes/Menu.gd" id="1_i1lb1"]
[ext_resource type="Shader" path="res://Scenes/Pause_menu.gdshader" id="2_xis31"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_acrrd"]
shader = ExtResource("2_xis31")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_g75xe"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.2, 0, 0.2, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_lc0ch"]
resource_name = "new_animation"
length = 0.4
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.2, 0, 0.2, 0, 2, -0.2, 0, 0.2, 0),
"times": PackedFloat32Array(0, 0.4)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1tx15"]
_data = {
"RESET": SubResource("Animation_g75xe"),
"new_animation": SubResource("Animation_lc0ch")
}

[node name="Pause_menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_i1lb1")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -100.0
offset_right = 450.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
material = SubResource("ShaderMaterial_acrrd")
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
size_flags_stretch_ratio = 1.43

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_stretch_ratio = 1.65

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Resume" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_bottom = NodePath("../Options")
theme_override_constants/outline_size = 0
text = "Resume"

[node name="Options" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../Resume")
focus_neighbor_bottom = NodePath("../Quit")
text = "Settings"

[node name="Quit" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../Options")
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1tx15")
}

[node name="MarginContainer2" type="MarginContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="MarginContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/Panel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Are you sure you want to Quit?"
horizontal_alignment = 1

[node name="Yes" type="Button" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Yes"

[node name="No" type="Button" parent="MarginContainer2/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "No"

[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="MarginContainer2/Panel/MarginContainer/VBoxContainer/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="MarginContainer2/Panel/MarginContainer/VBoxContainer/No" to="." method="_on_no_pressed"]
